--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azerothian/graphql-jtd",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc --build",
@@ -15,7 +15,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.123",
     "@vostro/graphql-types": "^2.0.0",
-    "@vostro/jtd-types": "^1.0.2",
+    "@azerothian/jtd-types": "^2.0.0",
     "graphql": "^16.10.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.5",
